Completed Project Overview API
