# public/docs/openapi.yaml
@@ -68,10 +68,97 @@ paths:
                 transcriptId:
                   type: integer
                   description: 'Id of the transcript.'
-                  example: 13
+                  example: 20
               required:
                 - transcriptId
       security: []
+  '/api/problems-and-goals/{id}':
+    post:
+      summary: 'Update Problems and Goals'
+      operationId: updateProblemsAndGoals
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Problems and Goals'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                problemGoalText:
+                  type: string
+                  description: 'text of the ProblemsAndGoals.'
+                  example: expedita
+              required:
+                - problemGoalText
+      security: []
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'Id of the problems and goals.'
+        example: 13
+        required: true
+        schema:
+          type: integer
+  /api/project-overview:
+    post:
+      summary: 'Create Project Overview'
+      operationId: createProjectOverview
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Project Overview'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                problemGoalID:
+                  type: integer
+                  description: 'Id of the ProblemsAndGoals.'
+                  example: 14
+              required:
+                - problemGoalID
+      security: []
+  '/api/project-overview/{id}':
+    post:
+      summary: 'Update Project Overview'
+      operationId: updateProjectOverview
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Project Overview'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                overviewText:
+                  type: string
+                  description: 'text of the ProjectOverview.'
+                  example: excepturi
+              required:
+                - overviewText
+      security: []
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'Id of the ProjectOverview.'
+        example: 3
+        required: true
+        schema:
+          type: integer
   /api/project-summery:
     get:
       summary: 'Get Project Summery List'
@@ -82,12 +169,12 @@ paths:
           in: query
           name: page
           description: 'page number.'
-          example: 10
+          example: 8
           required: false
           schema:
             type: integer
             description: 'page number.'
-            example: 10
+            example: 8
       responses:
         200:
           description: ''
@@ -96,7 +183,7 @@ paths:
               schema:
                 type: object
                 example:
-                  current_page: 10
+                  current_page: 8
                   data: []
                   first_page_url: 'http://localhost:8000/api/project-summery?page=1'
                   from: null
@@ -104,7 +191,7 @@ paths:
                   last_page_url: 'http://localhost:8000/api/project-summery?page=1'
                   links:
                     -
-                      url: 'http://localhost:8000/api/project-summery?page=9'
+                      url: 'http://localhost:8000/api/project-summery?page=7'
                       label: '&laquo; Previous'
                       active: false
                     -
@@ -118,13 +205,13 @@ paths:
                   next_page_url: null
                   path: 'http://localhost:8000/api/project-summery'
                   per_page: 10
-                  prev_page_url: 'http://localhost:8000/api/project-summery?page=9'
+                  prev_page_url: 'http://localhost:8000/api/project-summery?page=7'
                   to: null
                   total: 1
                 properties:
                   current_page:
                     type: integer
-                    example: 10
+                    example: 8
                   data:
                     type: array
                     example: []
@@ -144,7 +231,7 @@ paths:
                     type: array
                     example:
                       -
-                        url: 'http://localhost:8000/api/project-summery?page=9'
+                        url: 'http://localhost:8000/api/project-summery?page=7'
                         label: '&laquo; Previous'
                         active: false
                       -
@@ -160,7 +247,7 @@ paths:
                       properties:
                         url:
                           type: string
-                          example: 'http://localhost:8000/api/project-summery?page=9'
+                          example: 'http://localhost:8000/api/project-summery?page=7'
                         label:
                           type: string
                           example: '&laquo; Previous'
@@ -178,7 +265,7 @@ paths:
                     example: 10
                   prev_page_url:
                     type: string
-                    example: 'http://localhost:8000/api/project-summery?page=9'
+                    example: 'http://localhost:8000/api/project-summery?page=7'
                   to:
                     type: string
                     example: null
@@ -206,23 +293,23 @@ paths:
                 transcriptText:
                   type: string
                   description: 'The text of the transcript.'
-                  example: ipsum
+                  example: corporis
                 projectName:
                   type: string
                   description: 'The name of the project.'
-                  example: perspiciatis
+                  example: et
                 clientPhone:
                   type: string
                   description: 'The phone number of the client.'
-                  example: libero
+                  example: recusandae
                 clientEmail:
                   type: string
                   description: 'The email of the client.'
-                  example: nathanial81@example.org
+                  example: toy71@example.org
                 clientWebsite:
                   type: string
                   description: 'The website of the client.'
-                  example: suscipit
+                  example: commodi
               required:
                 - transcriptText
                 - projectName
@@ -271,7 +358,7 @@ paths:
                 summaryText:
                   type: integer
                   description: 'summaryText of the Project Summery.'
-                  example: 2
+                  example: 14
               required:
                 - summaryText
       security: []
@@ -298,13 +385,16 @@ paths:
             value: ''
           present:
             summary: 'When the value is present'
-            value: 15
+            value: 9
 tags:
   -
     name: Endpoints
     description: ''
   -
     name: 'Problems and Goals'
+    description: ''
+  -
+    name: 'Project Overview'
     description: ''
   -
     name: 'Project Summery'
